# analytics_service

./: Dockerfile  Readme.md  pyproject.toml
analytics_service/: manage.py
analytics_service/analytics_service/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
analytics_service/core/: forms.py  models.py  tasks.py  urls.py  views.py
analytics_service/core/migrations/: 0001_initial.py  0002_alter_event_user_delete_user.py  0003_event_processed_text.py
analytics_service/core/templates/: base.html  index.html
analytics_service/core/templates/auth/: login.html  logout.html  registration.html
analytics_service/core/templates/event/: create_event.html  event_detail.html  show_event.html
